# bib-check

./: .gitignore  CLAUDE.md  README.md  bib-check.py  pyproject.toml  requirements.txt
src/bib_check/: ai.py  cli.py  colors.py  config.py  converter.py  dblp.py  tui.py
